Use the old example for TTCTR

--- a/paper.tex
+++ b/paper.tex
@@ -279,7 +279,18 @@ Due to comparison reasons it has been also built these sampled structures using 
 
 
 \subsection{\ttctr}
-Version de spire y despues la variante nueva (\ctr).
+The \ttctr was introduced in \cite{brisaboa2018new}.
+
+Version de spire y despues la variante nueva (\ctr). \marginpar{\tiny Este ejemplo es complicado de editar, para un ejemplo sobre el nuevo ejemplo habria que hacer uno nuevo...}
+
+\begin{figure}[tbhp]
+	%\vspace{-0.2cm}
+    \includegraphics[width=1.00\textwidth]{ttctr_daniil.eps}
+	%\vspace{-0.3cm}
+	\caption{Structures involved in the creation of a \ttctr}
+	\label{fig:ttctr}
+	%\vspace{-0.2cm}
+\end{figure}
 
 \subsection{\ctr}
 \label{sec:ctr}
@@ -391,7 +402,7 @@ It is trivial to reuse the Algorithm~\ref{alg:xy} to answer queries with less co
 
 Of course, \ctr~can also be used to efficiently obtain other interesting information about trips, such as the top k most boarded stops, as shown in \cite{brisaboa2018compact}, with the additional possibility of differentiating stops that are only used to switch lines in \ctr. However, there is no known way of using this representation to obtain other kinds of information efficiently (e.g. the number of passengers in a journey between two stops).
 
-\subsection{Comparing \acumm and \ctr}
+\subsection{Comparing \acumm~and \ctr}
 \label{sec:comp}
 Better show this after they have been both explained... \marginpar{\tiny Include TTCTR in the table}
 
